[package]
name = "nfq-feature-flags"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde      = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
swc_core   = { version = "0.97.2", features = ["ecma_plugin_transform"] }
swc_common = "0.35.0"
chrono = { version = "0.4", features = ["wasmbind"] }
colored = "2"

[dev-dependencies]
swc_ecma_parser             = "0.147.0"
swc_ecma_transforms         = "0.233.0"
swc_ecma_transforms_testing = "0.144.0"
testing                     = "0.37.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
