[package]
name = "nfq-feature-flags"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde      = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
swc_core   = { version = "53.0.0", features = ["ecma_plugin_transform"] }
swc_common = "18.0.1"
chrono = { version = "0.4", features = ["wasmbind"] }
colored = "2"

[dev-dependencies]
swc_ecma_parser             = "31.0.0"
swc_ecma_transforms         = "43.0.0"
swc_ecma_transforms_testing = "37.0.0"
testing                     = "19.0.0"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
